src/bindings.rs

#[test]
fn bindgen_test_layout_fstHier__bindgen_ty_1_fstHierScope() {
    assert_eq!(
        ::std::mem::size_of::<fstHier__bindgen_ty_1_fstHierScope>(),
        32usize,
        concat!("Size of: ", stringify!(fstHier__bindgen_ty_1_fstHierScope))
    );
    assert_eq!(
        ::std::mem::align_of::<fstHier__bindgen_ty_1_fstHierScope>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(fstHier__bindgen_ty_1_fstHierScope)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierScope>())).typ as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierScope),
            "::",
            stringify!(typ)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierScope>())).name as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierScope),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierScope>())).component as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierScope),
            "::",
            stringify!(component)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierScope>())).name_length as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierScope),
            "::",
            stringify!(name_length)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierScope>())).component_length
                as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierScope),
            "::",
            stringify!(component_length)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fstHier__bindgen_ty_1_fstHierVar {
    pub typ: ::std::os::raw::c_uchar,
    pub direction: ::std::os::raw::c_uchar,
    pub svt_workspace: ::std::os::raw::c_uchar,
    pub sdt_workspace: ::std::os::raw::c_uchar,
    pub sxt_workspace: ::std::os::raw::c_uint,
    pub name: *const ::std::os::raw::c_char,
    pub length: u32,
    pub handle: fstHandle,
    pub name_length: u32,
    pub is_alias: u8,
}
#[test]
fn bindgen_test_layout_fstHier__bindgen_ty_1_fstHierVar() {
    assert_eq!(
        ::std::mem::size_of::<fstHier__bindgen_ty_1_fstHierVar>(),
        32usize,
        concat!("Size of: ", stringify!(fstHier__bindgen_ty_1_fstHierVar))
    );
    assert_eq!(
        ::std::mem::align_of::<fstHier__bindgen_ty_1_fstHierVar>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).typ as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(typ)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).direction as *const _
                as usize
        },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(direction)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).svt_workspace as *const _
                as usize
        },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(svt_workspace)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).sdt_workspace as *const _
                as usize
        },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(sdt_workspace)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).sxt_workspace as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(sxt_workspace)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).name as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).length as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).handle as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(handle)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).name_length as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(name_length)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierVar>())).is_alias as *const _
                as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierVar),
            "::",
            stringify!(is_alias)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fstHier__bindgen_ty_1_fstHierAttr {
    pub typ: ::std::os::raw::c_uchar,
    pub subtype: ::std::os::raw::c_uchar,
    pub name: *const ::std::os::raw::c_char,
    pub arg: u64,
    pub arg_from_name: u64,
    pub name_length: u32,
}
#[test]
fn bindgen_test_layout_fstHier__bindgen_ty_1_fstHierAttr() {
    assert_eq!(
        ::std::mem::size_of::<fstHier__bindgen_ty_1_fstHierAttr>(),
        40usize,
        concat!("Size of: ", stringify!(fstHier__bindgen_ty_1_fstHierAttr))
    );
    assert_eq!(
        ::std::mem::align_of::<fstHier__bindgen_ty_1_fstHierAttr>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierAttr>())).typ as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr),
            "::",
            stringify!(typ)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierAttr>())).subtype as *const _
                as usize
        },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr),
            "::",
            stringify!(subtype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierAttr>())).name as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierAttr>())).arg as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr),
            "::",
            stringify!(arg)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierAttr>())).arg_from_name as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr),
            "::",
            stringify!(arg_from_name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fstHier__bindgen_ty_1_fstHierAttr>())).name_length as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1_fstHierAttr),
            "::",
            stringify!(name_length)
        )
    );
}
#[test]
fn bindgen_test_layout_fstHier__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<fstHier__bindgen_ty_1>(),
        40usize,
        concat!("Size of: ", stringify!(fstHier__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<fstHier__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(fstHier__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fstHier__bindgen_ty_1>())).scope as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1),
            "::",
            stringify!(scope)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fstHier__bindgen_ty_1>())).var as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1),
            "::",
            stringify!(var)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fstHier__bindgen_ty_1>())).attr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier__bindgen_ty_1),
            "::",
            stringify!(attr)
        )
    );
}
#[test]
fn bindgen_test_layout_fstHier() {
    assert_eq!(
        ::std::mem::size_of::<fstHier>(),
        48usize,
        concat!("Size of: ", stringify!(fstHier))
    );
    assert_eq!(
        ::std::mem::align_of::<fstHier>(),
        8usize,
        concat!("Alignment of ", stringify!(fstHier))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fstHier>())).htyp as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier),
            "::",
            stringify!(htyp)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fstHier>())).u as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fstHier),
            "::",
            stringify!(u)
        )
    );
}
extern "C" {
    pub fn fstReaderClose(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn fstReaderClrFacProcessMask(ctx: *mut ::std::os::raw::c_void, facidx: fstHandle);
}
extern "C" {
    pub fn fstReaderClrFacProcessMaskAll(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn fstReaderGetAliasCount(ctx: *mut ::std::os::raw::c_void) -> u64;
}
